--- a/app/src/main/res/layout/activity_ctdh_da_giao.xml
+++ b/app/src/main/res/layout/activity_ctdh_da_giao.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,6 +9,7 @@
     android:background="@color/white"
     tools:context=".Activity.Activity_CTDH_DaGiao">
 
+    <!-- Back Button -->
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
+    <!-- Header Title -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -32,27 +35,26 @@
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Scrollable Content -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="800dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        >
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            >
+            android:padding="16dp">
 
+            <!-- RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvCTDH_DaGiao"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
 
+            <!-- Contact Information Header -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,213 +63,184 @@
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                />
+                android:layout_marginBottom="16dp" />
 
+            <!-- Contact Information -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
+
+                <!-- Recipient Name -->
                 <ImageView
                     android:id="@+id/img1"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     android:src="@drawable/btn_4"
-                    />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/tvname1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tên người nhận"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/img1"
-                    android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginStart="10dp" />
 
                 <TextView
                     android:id="@+id/tvName_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Do Minh Hiếu"
+                    app:layout_constraintStart_toEndOf="@id/img1"
                     app:layout_constraintTop_toBottomOf="@id/tvname1"
-                    app:layout_constraintLeft_toRightOf="@id/img1"
-                    android:layout_marginLeft="10dp"
-                    />
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Phone Number -->
                 <ImageView
                     android:id="@+id/img2"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    app:layout_constraintTop_toBottomOf="@id/img1"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     android:src="@drawable/phone"
-                    android:layout_marginTop="20dp"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/img1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Số điện thoại"
-                    app:layout_constraintTop_toBottomOf="@id/tvName_CTDH_DaGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img2"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img2"
+                    app:layout_constraintTop_toTopOf="@id/img2"
+                    android:layout_marginStart="10dp" />
 
                 <TextView
                     android:id="@+id/tvPhone_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="099999999999"
-                    app:layout_constraintTop_toBottomOf="@id/tvname2"
-                    app:layout_constraintLeft_toRightOf="@id/img2"
-                    android:layout_marginLeft="10dp"
                     android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img2"
+                    app:layout_constraintTop_toBottomOf="@id/tvname2"
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Address -->
                 <ImageView
                     android:id="@+id/img3"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    app:layout_constraintTop_toBottomOf="@id/img2"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     android:src="@drawable/adress"
-                    android:layout_marginTop="20dp"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/img2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Địa chỉ"
-                    app:layout_constraintTop_toBottomOf="@id/tvPhone_CTDH_DaGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img3"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img3"
+                    app:layout_constraintTop_toTopOf="@id/img3"
+                    android:layout_marginStart="10dp" />
 
                 <TextView
                     android:id="@+id/tvAdress_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Khu 3, thị trấn Trạm Trôi, huyện Hoài Đức, Hà Nội"
-                    app:layout_constraintTop_toBottomOf="@id/tvname3"
-                    app:layout_constraintLeft_toRightOf="@id/img3"
-                    android:layout_marginLeft="10dp"
                     android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img3"
+                    app:layout_constraintTop_toBottomOf="@id/tvname3"
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Payment Method -->
                 <ImageView
                     android:id="@+id/img4"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    app:layout_constraintTop_toBottomOf="@id/img3"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     android:src="@drawable/payment"
-                    android:layout_marginTop="20dp"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/img3"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Phương thức thanh toán"
-                    app:layout_constraintTop_toBottomOf="@id/tvAdress_CTDH_DaGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img4"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img4"
+                    app:layout_constraintTop_toTopOf="@id/img4"
+                    android:layout_marginStart="10dp" />
 
                 <TextView
                     android:id="@+id/tvPayMent_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Thanh toán khi nhận hàng"
-                    app:layout_constraintTop_toBottomOf="@id/tvname4"
-                    app:layout_constraintLeft_toRightOf="@id/img4"
-                    android:layout_marginLeft="10dp"
                     android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img4"
+                    app:layout_constraintTop_toBottomOf="@id/tvname4"
+                    android:layout_marginStart="10dp" />
 
+                <!-- Order Status -->
                 <TextView
                     android:id="@+id/tvTT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DaGiao"
                     android:text="Trạng thái đơn hàng:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DaGiao"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvTrangThai_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Chờ xác nhận"
-                    app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DaGiao"
-                    app:layout_constraintLeft_toRightOf="@id/tvTT"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="18dp"
+                    android:text="Đã giao"
+                    android:textColor="#4CAF50"
+                    app:layout_constraintStart_toEndOf="@id/tvTT"
+                    app:layout_constraintTop_toTopOf="@id/tvTT"
+                    android:layout_marginStart="8dp"
                     android:textSize="16dp"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
 
-
+                <!-- Total Cost -->
                 <TextView
                     android:id="@+id/tvTCP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvTT"
                     android:text="Tổng chi phí:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tvTT"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvTCP_CTDH_DaGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10000$"
-                    app:layout_constraintTop_toBottomOf="@id/tvTT"
-                    app:layout_constraintLeft_toRightOf="@id/tvTCP"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="18dp"
+                    app:layout_constraintStart_toEndOf="@id/tvTCP"
+                    app:layout_constraintTop_toTopOf="@id/tvTCP"
+                    android:layout_marginStart="8dp"
                     android:textSize="16dp"
-                    android:textStyle="bold"
-                    />
-
-<!--                <Button-->
-<!--                    android:id="@+id/btnDaNhanHang"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/tvTCP"-->
-<!--                    android:layout_marginTop="16dp"-->
-<!--                    android:text="Đã nhận được hàng"-->
-<!--                    android:textSize="20dp"-->
-<!--                    />-->
-
+                    android:textColor="#FF0000"
+                    android:textStyle="bold" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
