--- a/app/src/main/res/layout/activity_ctdh_dang_giao.xml
+++ b/app/src/main/res/layout/activity_ctdh_dang_giao.xml
@@ -8,6 +8,7 @@
     android:background="@color/white"
     tools:context=".Activity.Activity_CTDH_DangGiao">
 
+    <!-- Back Button -->
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -16,8 +17,10 @@
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_back" />
+        app:srcCompat="@drawable/ic_back"
+        android:contentDescription="Back Button" />
 
+    <!-- Title -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -28,31 +31,35 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.405"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toEndOf="@id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+    <!-- Scrollable Content -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
-        android:layout_height="800dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        >
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            >
+            android:padding="16dp">
 
+            <!-- RecyclerView for Order Details -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvCTDH_DangGiao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginBottom="16dp"
+                tools:listitem="@layout/item_order_detail" />
 
+            <!-- Contact Information -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,33 +68,31 @@
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                />
+                android:layout_marginBottom="16dp" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
+
+                <!-- Receiver's Name -->
                 <ImageView
                     android:id="@+id/img1"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    android:src="@drawable/btn_4"
-                    />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:src="@drawable/btn_4" />
 
                 <TextView
                     android:id="@+id/tvname1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tên người nhận"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/img1"
-                    android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/img1"
+                    android:layout_marginStart="10dp" />
 
                 <TextView
                     android:id="@+id/tvName_CTDH_DangGiao"
@@ -95,68 +100,61 @@
                     android:layout_height="wrap_content"
                     android:text="Do Minh Hiếu"
                     app:layout_constraintTop_toBottomOf="@id/tvname1"
-                    app:layout_constraintLeft_toRightOf="@id/img1"
-                    android:layout_marginLeft="10dp"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img1"
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Phone Number -->
                 <ImageView
                     android:id="@+id/img2"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     app:layout_constraintTop_toBottomOf="@id/img1"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:src="@drawable/phone"
-                    android:layout_marginTop="20dp"
-                    />
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Số điện thoại"
-                    app:layout_constraintTop_toBottomOf="@id/tvName_CTDH_DangGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img2"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tvName_CTDH_DangGiao"
+                    app:layout_constraintStart_toEndOf="@id/img2"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvPhone_CTDH_DangGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="099999999999"
+                    android:text="0999999999"
                     app:layout_constraintTop_toBottomOf="@id/tvname2"
-                    app:layout_constraintLeft_toRightOf="@id/img2"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img2"
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Address -->
                 <ImageView
                     android:id="@+id/img3"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     app:layout_constraintTop_toBottomOf="@id/img2"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:src="@drawable/adress"
-                    android:layout_marginTop="20dp"
-                    />
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Địa chỉ"
-                    app:layout_constraintTop_toBottomOf="@id/tvPhone_CTDH_DangGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img3"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tvPhone_CTDH_DangGiao"
+                    app:layout_constraintStart_toEndOf="@id/img3"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvAdress_CTDH_DangGiao"
@@ -164,34 +162,30 @@
                     android:layout_height="wrap_content"
                     android:text="Khu 3, thị trấn Trạm Trôi, huyện Hoài Đức, Hà Nội"
                     app:layout_constraintTop_toBottomOf="@id/tvname3"
-                    app:layout_constraintLeft_toRightOf="@id/img3"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img3"
+                    android:layout_marginStart="10dp" />
 
-
+                <!-- Payment Method -->
                 <ImageView
                     android:id="@+id/img4"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     app:layout_constraintTop_toBottomOf="@id/img3"
-                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:src="@drawable/payment"
-                    android:layout_marginTop="20dp"
-                    />
+                    android:layout_marginTop="20dp" />
 
                 <TextView
                     android:id="@+id/tvname4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Phương thức thanh toán"
-                    app:layout_constraintTop_toBottomOf="@id/tvAdress_CTDH_DangGiao"
-                    app:layout_constraintLeft_toRightOf="@id/img4"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tvAdress_CTDH_DangGiao"
+                    app:layout_constraintStart_toEndOf="@id/img4"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvPayMent_CTDH_DangGiao"
@@ -199,50 +193,48 @@
                     android:layout_height="wrap_content"
                     android:text="Thanh toán khi nhận hàng"
                     app:layout_constraintTop_toBottomOf="@id/tvname4"
-                    app:layout_constraintLeft_toRightOf="@id/img4"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold"
-                    />
+                    app:layout_constraintStart_toEndOf="@id/img4"
+                    android:layout_marginStart="10dp" />
 
+                <!-- Order Status -->
                 <TextView
                     android:id="@+id/tvTT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DangGiao"
                     android:text="Trạng thái đơn hàng:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DangGiao"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvTrangThai_CTDH_DangGiao"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Chờ xác nhận"
+                    android:text="Đang giao"
                     app:layout_constraintTop_toBottomOf="@id/tvPayMent_CTDH_DangGiao"
-                    app:layout_constraintLeft_toRightOf="@id/tvTT"
-                    android:layout_marginLeft="10dp"
+                    app:layout_constraintStart_toEndOf="@id/tvTT"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="18dp"
                     android:textSize="16dp"
-                    android:textStyle="bold"
-                    />
+                    android:textColor="#2196F3"
+                    android:textStyle="bold" />
 
-
+                <!-- Total Cost -->
                 <TextView
                     android:id="@+id/tvTCP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvTT"
                     android:text="Tổng chi phí:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+
+                    app:layout_constraintTop_toBottomOf="@id/tvTT"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvTCP_CTDH_DangGiao"
@@ -250,25 +242,13 @@
                     android:layout_height="wrap_content"
                     android:text="10000$"
                     app:layout_constraintTop_toBottomOf="@id/tvTT"
-                    app:layout_constraintLeft_toRightOf="@id/tvTCP"
-                    android:layout_marginLeft="10dp"
+                    app:layout_constraintStart_toEndOf="@id/tvTCP"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="18dp"
                     android:textSize="16dp"
-                    android:textStyle="bold"
-                    />
-
-<!--                <Button-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                    app:layout_constraintTop_toBottomOf="@+id/tvTCP"-->
-<!--                    android:layout_marginTop="16dp"-->
-<!--                    android:text="Hủy Đơn Hàng"-->
-<!--                    android:textSize="20dp"-->
-<!--                    android:visibility="gone"-->
-<!--                    />-->
-
+                    android:textColor="#FF0000"
+                    android:textStyle="bold" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
