--- a/app/src/main/res/layout/activity_ctdh_huy_dh.xml
+++ b/app/src/main/res/layout/activity_ctdh_huy_dh.xml
@@ -8,6 +8,7 @@
     android:background="@color/white"
     tools:context=".Activity.Activity_CTDH_HuyDH">
 
+    <!-- Back Button -->
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
@@ -18,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back" />
 
+    <!-- Header Title -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -32,98 +34,82 @@
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Scrollable Content -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="800dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        >
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            >
+            android:padding="16dp">
 
+            <!-- RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvCTDH_HuyDH"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
+
+            <!-- Status and Total Cost Section -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp">
 
-                >
+                <!-- Order Status -->
                 <TextView
                     android:id="@+id/tvTT"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:text="Trạng thái đơn hàng:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/tvTrangThai_CTDH_HuyDH"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Chờ xác nhận"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintLeft_toRightOf="@id/tvTT"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="18dp"
-                    android:textSize="16dp"
+                    android:text="Đã hủy"
+                    android:textColor="#FF0000"
                     android:textStyle="bold"
-                    />
+                    android:textSize="16dp"
+                    app:layout_constraintStart_toEndOf="@id/tvTT"
+                    app:layout_constraintTop_toTopOf="@id/tvTT"
+                    android:layout_marginStart="8dp" />
 
-
+                <!-- Total Cost -->
                 <TextView
                     android:id="@+id/tvTCP"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvTT"
                     android:text="Tổng chi phí:"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:layout_marginTop="16dp"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/tvTT"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="16dp" />
 
                 <TextView
                     android:id="@+id/tvTCP_CTDH_HuyDH"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10000$"
-                    app:layout_constraintTop_toBottomOf="@id/tvTT"
-                    app:layout_constraintLeft_toRightOf="@id/tvTCP"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="18dp"
-                    android:textSize="16dp"
+                    android:textColor="@color/colorButton"
                     android:textStyle="bold"
+                    android:textSize="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/tvTT"
+                    app:layout_constraintStart_toEndOf="@id/tvTCP"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
                     />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <!--                <Button-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    app:layout_constraintLeft_toLeftOf="parent"-->
-                <!--                    app:layout_constraintTop_toBottomOf="@+id/tvTCP"-->
-                <!--                    android:layout_marginTop="16dp"-->
-                <!--                    android:text="Hủy Đơn Hàng"-->
-                <!--                    android:textSize="20dp"-->
-                <!--                    android:visibility="gone"-->
-                <!--                    />-->
-
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
