--- a/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_ctsp_to_thanh_toan.xml
@@ -37,82 +37,91 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                >
+                android:padding="16dp"
+                android:gravity="center_vertical">
+
+                <!-- Hình ảnh sản phẩm -->
                 <ImageView
                     android:id="@+id/imgProduct_od_ctsp"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="16dp"
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/nice_shoe" />
 
+                <!-- Thông tin sản phẩm -->
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
                     android:orientation="vertical">
 
+                    <!-- Tên sản phẩm -->
                     <TextView
                         android:id="@+id/tvName_od_ctsp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Tên của SP"
-                        android:layout_margin="5dp"
+                        android:text="Tên sản phẩm rất dài sẽ bị rút gọn nếu vượt quá dòng"
                         android:textStyle="bold"
                         android:textColor="@color/black"
-                        android:textSize="20dp" />
+                        android:textSize="16sp"
+                        android:maxLines="1"
+                        android:ellipsize="end" />
+
+                    <!-- Thông tin size và số lượng -->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginTop="4dp">
 
                         <TextView
                             android:id="@+id/tvSize_od_ctsp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Size"
-                            android:layout_margin="5dp"
-                            android:textSize="15dp" />
-
+                            android:text="Size: 42"
+                            android:textSize="14sp"
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="3dp"
                             android:text=", "
-                            android:textSize="15dp" />
+                            android:textSize="14sp"
+                            android:textColor="@color/black" />
+
                         <TextView
                             android:id="@+id/tvSL_od_ctsp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Số lượng"
-                            android:layout_margin="5dp"
-                            android:textSize="15dp" />
+                            android:text="Số lượng: 2"
+                            android:textSize="14sp"
+                            android:textColor="@color/black" />
                     </LinearLayout>
 
+                    <!-- Giá sản phẩm -->
                     <TextView
                         android:id="@+id/tvPrice_od_ctsp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
-                        android:text="100 VNĐ"
-                        android:textColor="#ff00"
-                        android:textSize="20dp" />
-
+                        android:layout_marginTop="8dp"
+                        android:text="100.000 VNĐ"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="#FF0000" />
                 </LinearLayout>
             </LinearLayout>
+
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/txtV"
-                android:text="Order Summary"
+                android:text="Tóm tắt đơn hàng"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="18sp"
@@ -128,7 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/txt0"
-                    android:text="Your amount"
+                    android:text="Mệnh giá"
                     style="@style/textStyle"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -183,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/txt7"
                     style="@style/textStyleBold"
-                    android:text="Total"
+                    android:text="Tổng"
                     app:layout_constraintStart_toStartOf="@+id/txt5"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@id/View"/>
@@ -254,7 +263,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="Infomation"
+                android:text="Thông tin"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -269,7 +278,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/txtA"
-                    android:text="Your Address"
+                    android:text="Địa chỉ của bạn "
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
                 <LinearLayout
@@ -329,7 +338,7 @@
                             android:layout_height="wrap_content"
                             android:id="@+id/txtAddress"
                             android:layout_marginStart="8dp"
-                            android:text="Enter your address"
+                            android:text="Thêm địa chỉ của bạn "
                             style="@style/textStyleBold"
                             />
                     </LinearLayout>
@@ -347,7 +356,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/txtB"
-                    android:text="Payment Method"
+                    android:text="Phương thức thanh toán"
                     android:layout_marginTop="8dp"
                    />
                 <LinearLayout
